updated responsive issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,11 +401,15 @@ textarea {
     .the-inner{
         padding-top: 5rem;
     }
-    .container {
+    .container{
         padding-top: 30px;
         padding-bottom: 30px;
         padding-left: 1rem;
         padding-right: 1rem;
+    }
+    .container-fluid {
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
     .btn{
         padding-left: 20px;
@@ -430,9 +434,7 @@ textarea {
     .testimonials-col{
         margin-top: 3rem;
     }
-    .contact-title{
-        margin-top: 5rem;
-    }
+
 }
 
 @media only screen and (max-width: 767px) {
